[gd_scene load_steps=25 format=2]

[ext_resource path="res://csotanykiraly.gd" type="Script" id=1]
[ext_resource path="res://art/Sprite-0004-Recovered.png" type="Texture" id=2]
[ext_resource path="res://lab.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0967

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 13.5351, 16.1379 )

[sub_resource type="CircleShape2D" id=3]
radius = 13.6517

[sub_resource type="CircleShape2D" id=4]
radius = 20.8184

[sub_resource type="Animation" id=5]
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/attack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 1 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}

[sub_resource type="Animation" id=6]

[sub_resource type="Animation" id=7]
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=8]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/attack/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="CircleShape2D" id=9]
radius = 860.296

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "attack"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "attack2"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "idle"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "run"

[sub_resource type="AnimationNodeStateMachineTransition" id=14]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=15]

[sub_resource type="AnimationNodeStateMachineTransition" id=16]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=17]

[sub_resource type="AnimationNodeStateMachineTransition" id=18]
switch_mode = 2
auto_advance = true

[sub_resource type="AnimationNodeStateMachineTransition" id=19]

[sub_resource type="AnimationNodeStateMachine" id=20]
states/attack/node = SubResource( 10 )
states/attack/position = Vector2( 607, 135 )
states/attack2/node = SubResource( 11 )
states/attack2/position = Vector2( 607, 31 )
states/idle/node = SubResource( 12 )
states/idle/position = Vector2( 786, 31 )
states/run/node = SubResource( 13 )
states/run/position = Vector2( 797, 135 )
transitions = [ "attack", "idle", SubResource( 14 ), "idle", "attack", SubResource( 15 ), "run", "idle", SubResource( 16 ), "idle", "run", SubResource( 17 ), "attack2", "idle", SubResource( 18 ), "idle", "attack2", SubResource( 19 ) ]
start_node = "idle"

[sub_resource type="AnimationNodeStateMachinePlayback" id=21]

[node name="csotanykiraly" type="KinematicBody2D"]
position = Vector2( -0.28976, 0.257565 )
collision_layer = 9
collision_mask = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -5.84508, 4.31596 )
rotation = -1.5708
texture = ExtResource( 2 )
hframes = 3
region_enabled = true
region_rect = Rect2( -5, 0, 244, 130.368 )

[node name="attackrange" type="Area2D" parent="Sprite"]
position = Vector2( 0.23782, 0.95131 )
rotation = 1.5708
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/attackrange"]
light_mask = 4
position = Vector2( 34.1198, -4.67402 )
shape = SubResource( 1 )

[node name="attack" type="Area2D" parent="Sprite"]
position = Vector2( 0.441725, 1.35912 )
rotation = 1.5708
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/attack"]
light_mask = 4
position = Vector2( 34.3452, -4.86537 )
shape = SubResource( 2 )
disabled = true

[node name="lab" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( 28.9808, 27.5198 )
rotation = 1.5708

[node name="lab2" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( 31.0354, -3.52831 )
rotation = 1.5708
scale = Vector2( -1, 1 )

[node name="lab3" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( 28.5053, 14.6772 )
rotation = 1.5708

[node name="lab4" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( 30.1702, -16.716 )
rotation = 1.57079
scale = Vector2( -1, 1 )

[node name="lab5" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( -19.0602, 28.9466 )
rotation = -1.5708
scale = Vector2( -1, 1 )

[node name="lab6" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( -21.6762, 15.6282 )
rotation = 1.62141
scale = Vector2( 1, -1 )

[node name="lab7" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( -21.2006, -2.92221 )
rotation = -1.57079

[node name="lab8" parent="Sprite" instance=ExtResource( 3 )]
position = Vector2( -19.7735, -16.2405 )
rotation = -1.57079

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 1.02355, -0.592454 )
shape = SubResource( 3 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
position = Vector2( -33.6353, -0.349894 )
shape = SubResource( 4 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 5 )
anims/attack2 = SubResource( 6 )
anims/idle = SubResource( 7 )
anims/run = SubResource( 8 )

[node name="attackrange2" type="Area2D" parent="."]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackrange2"]
light_mask = 4
position = Vector2( 3.99259, 0.736137 )
shape = SubResource( 9 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 20 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/playback = SubResource( 21 )

[node name="Bar" type="ColorRect" parent="."]
margin_left = -52.9998
margin_top = -1.89636
margin_right = -2.99978
margin_bottom = 0.103643
grow_horizontal = 2
color = Color( 0.317647, 0.196078, 0.611765, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
wait_time = 0.17

[node name="spawnar" type="Position2D" parent="."]
position = Vector2( -55.1283, 0 )

[node name="spawnitime" type="Timer" parent="."]
autostart = true
[connection signal="body_entered" from="Sprite/attackrange" to="." method="_on_attackrange_body_entered"]
[connection signal="body_exited" from="Sprite/attackrange" to="." method="_on_attackrange_body_exited"]
[connection signal="body_entered" from="Sprite/attack" to="." method="_on_attack_body_entered"]
[connection signal="body_entered" from="attackrange2" to="." method="_on_attackrange2_body_entered"]
[connection signal="body_exited" from="attackrange2" to="." method="_on_attackrange2_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="spawnitime" to="." method="_on_spawnitime_timeout"]
